Added code block code

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <script>
+  <!-- <script>
     var entityMap = {
       "&": "&amp;",
       "<": "&lt;",
@@ -45,7 +45,8 @@
       }
     }
 
-  </script>
+  </script> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <app-root></app-root>
 </body>
 
